frontend/tests/cases/positive/graded/generalFixExt.gr
fix' : forall {a : Type, s : Semiring} . (a -> a) [(1 + Inf) : Ext s] -> a
fix' [f] = f (fix' [f])