frontend/tests/cases/negative/graded/intervalApprox.gr
foo : forall {a : Type} . a [0..Inf] -> (a, a)
foo [a] = (a, a)

-- Bad approx (wrong way)
intervalApprox : forall {a : Type} . a [1..2] -> (a, a)
intervalApprox = foo